Fixing Logs to valign top and size of container

--- a/dashboard/static/css/main.css
+++ b/dashboard/static/css/main.css
@@ -143,6 +143,7 @@ h2, h3 {
 }
 
 .log td {
+  vertical-align :top;
   padding-right: 10px;
 }
 
